      Michael Stapelberg.
  * Cupt
    - Cache:
      - Require List::MoreUtils >= 0.23 directly in code too. Thanks to
        Michael Stapelberg for the suggestion.
    - System:
      - Worker:
        - Sort downloads alphabetically.
        - 'update_release_and_index_data': flip the return result to match the
          documentation.
  * debian/rules:
    - Fixed building with Perl 5.10.1.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 17 Sep 2009 13:18:22 +0300

cupt (0.6.5) unstable; urgency=low

  * cupt:
    - 'dist-upgrade': fixed the regression since 0.6.4 being not able to
      proceed package management tools upgrade successfully.
    - The option '--no-install-unpacked' went away. Now the all the packages
      within some interim state are scheduled for installation, but with no
      stick, so one can easily install other versions or delete them
      explicitly.
  * Cupt:
    - Download:
      - Manager:
        - Honor 'cupt::worker::simulate' option in the native way.
        - [API break] Advanced input parameters for 'download' subroutine to
          include optional short and long aliases.
        - [API break] Removed 'set_short_alias_for_uri' subroutine.
        - [API break] Removed 'set_long_alias_for_uri' subroutine.
    - System:
      - State:
        - Consider all packages except in states 'not-installed' and
          'config-files' as installed. They are full-right participants of
          dependency and worker management.
      - Worker:
        - Create partial directory for downloads when it doesn't exist.
          Thanks to Cyril Brulebois.
        - Don't try to check hash sums of Packages/Sources when no local file
          exists while deciding should we download Packages/Sources or not.
          Thanks to Cyril Brulebois. Thanks to James Vega.
          (Closes: #545685)
        - While splitting heterogeneous actions, set '--force-depends' dpkg