@@ -141,6 +141,7 @@ sub new {
 		'apt::neverautoremove' => [],
 		'apt::update::pre-invoke' => [],
 		'apt::update::post-invoke' => [],
+		'apt::update::post-invoke-success' => [],
 		'dpkg::options' => [],
 		'dpkg::pre-install-pkgs' => [],
 		'dpkg::pre-invoke' => [],
