@@ -780,11 +780,12 @@ apt::acquire::translation, apt::cache::allversions, apt::cache::important,
 apt::cache::namesonly, apt::cache::recursedepends, apt::default-release,
 apt::install-recommends, apt::install-suggests, apt::neverautoremove,
 apt::get::allowunauthenticated, apt::get::automaticremove, apt::get::purge,
-dir, dir::bin::dpkg, dir::cache, dir::cache::archives, dir::etc,
-dir::etc::sourcelist, dir::etc::sourceparts, dir::etc::parts, dir::etc::main,
-dir::etc::preferences, dir::state, dir::state::extendedstates,
-dir::state::lists, dir::state::status, dpkg::options, dpkg::pre-invoke,
-dpkg::post-invoke, dpkg::pre-install-pkgs, gpgv::trustedkeyring, quiet
+apt::update::post-invoke-success, dir, dir::bin::dpkg, dir::cache,
+dir::cache::archives, dir::etc, dir::etc::sourcelist, dir::etc::sourceparts,
+dir::etc::parts, dir::etc::main, dir::etc::preferences, dir::state,
+dir::state::extendedstates, dir::state::lists, dir::state::status,
+dpkg::options, dpkg::pre-invoke, dpkg::post-invoke, dpkg::pre-install-pkgs,
+gpgv::trustedkeyring, quiet
 
 See L<apt.conf(5)> for their meanings.
 
