@@ -13,6 +13,10 @@ cupt (0.6.6~) UNRELEASED; urgency=low
         - Sort downloads alphabetically.
         - 'update_release_and_index_data': flip the return result to match the
           documentation.
+        - 'update_release_and_index_data': honor
+          'apt::update::post-invoke-success' option.
+    - Config:
+      - Added configuration variable 'apt::update::post-invoke-success'.
   * debian/rules:
     - Fixed building with Perl 5.10.1.
 
